# Scaled-algencan-c-cpp-cmake

./: .gitignore  README.md
cmake/: CMakeLists.txt
cmake/includes/: algencan.h
cmake/modules/: FindSCALED_ALGENCAN.cmake
cmake/src/: main.cpp
cpp/: main.cpp
